# xlab

./: .env.blank  .gitignore  CHANGELOG.md  LICENSE  README.md  data.py  infer.py  manage.py  pyproject.toml  requirements.txt  xlab.py
conf/: cpu.yaml  defaults.yaml  original.yaml  wikipedia.yaml  xlab.yaml
conf/extra/: bulk_options.yaml  debug.yaml  dummy.yaml  early_stopping.yaml  lr_scheduler.yaml  original.yaml  rich.yaml  s3.yaml
notebooks/: attn_sample.ipynb  dataset_stats.ipynb
xlab/: config.py  data.py  datamodules.py  dataset.py  datasets.py  inference.py  models.py  tokenizer.py  training.py  transformers.py  util.py
xlab/inference/: beam_search.py  sample.py
xlab/models/: transformer.py
xlabml/: __init__.py  callbacks.py  config.py  datamodules.py  datasets.py  inference.py  models.py  sched.py  stats.py  text.py  tokenizer.py  transformers.py  utils.py
xlabml/bolts/concat_dataset/: datasets.py
xlabml/tests/: test_datasets.py  test_tokenizer.py
